# teckochecker

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CORS_FIX_SUMMARY.md  Caddyfile  Caddyfile.example  Caddyfile.ip-only  Caddyfile.letsencrypt-manual  Dockerfile  Dockerfile.debug  Makefile  QUICK_START.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  teckochecker.py
app/: config.py  database.py  main.py  models.py  rate_limiter.py  schemas.py
app/api/: admin.py  jobs.py  system.py
app/cli/: commands.py  main.py  utils.py
app/integrations/: keboola_client.py  openai_client.py
app/services/: encryption.py  polling.py  scheduler.py  secrets.py
app/web/: __init__.py  routes.py
app/web/static/: index.html
app/web/static/css/: terminal.css
app/web/static/js/: api.js  app.js  snake.js
demo/: .env.example  README.md  README_KEBOOLA.md  README_OPENAI.md  keboola_batch_handler.py  keboola_config.json  main.py  openai_batch_demo.py  requirements.txt
docs/: DEPLOYMENT_AWS.md  DOCKER.md  DOCKER_VOLUMES.md  EASTER_EGGS.md  RELEASE_GUIDE.md  RELEASE_NOTES_v0.9.0.md  SECURITY.md  SETUP.md  USER_GUIDE.md  architecture.md  prd.md
docs/architecture/: README.md  custom-checks-prd.md  multi-batch-brownfield-architecture.md  web-ui-design.md
scripts/: RELEASE_v0.9.0.sh  init_db.py  install.sh  migrate_to_multibatch.py  run_api.sh  show_schema.py  test_api.sh  test_api_setup.py  test_create_job.py  test_integration.py  test_trigger_keboola.py  verify_setup.py
tests/integration/: test_basic_flow.py  test_multi_batch_e2e.py
tests/unit/: test_api_endpoints.py  test_api_endpoints_multibatch.py  test_job_batch_model.py  test_multi_batch_polling.py  test_multi_batch_polling_summary.md  test_polling.py  test_secret_relationships.py  test_secrets.py
